Updated the 'simdiag_transform' function.
Can now specify the dimension of the projected subspace with the
argument 'q'.

--- a/TODO
+++ b/TODO
@@ -1,14 +1,3 @@
-* TODO Add 'fast_svd' option to SimDiag
-** TODO Determine how we should determine with class has larger rank
-
-*** Write a function that does this.
-*** By default, choose the order that the data sets are in.
-*** Provide the user with an argument that allows for an automatic detection of q_1.
-
-Tell the user that can this option can slightly increase the runtime, especially if the
-data are not 'wide'.
-
-    
 * TODO Determine if 'Q' is a solution to a generalized eigenvalue problem
 ** TODO Read Generalized Eigenvalues Paper from OsoFast
 
@@ -29,10 +18,9 @@ Make this available to the user. Also, include in this in print.sdlda
 
 Also, update the examples.
 
+* TODO Code 'fast_svd' SimDiag function
+* TODO Add 'fast_svd' option/argument to 'simdiag'
+* TODO Code Guo simulation
+* TODO Code microarray simulations
+* TODO Code Bhattacharyya distance
 
-** Code 'fast_svd' SimDiag function
-** Add 'fast_svd' option/argument to 'simdiag'
-** Code Guo simulation
-** Code microarray simulations
-** Code Bhattacharyya distance
-** Add MDEB regularization technique to simulations and rerun them
