--- a/TODO
+++ b/TODO
@@ -1,18 +1,6 @@
-* Paper
-** TODO Determine if 'Q' is a solution to a generalized eigenvalue problem
-** TODO Read Generalized Eigenvalues Paper from OsoFast
-
-This paper deals with positive semidefinite covariance matrices.
-It might clearly define the generalized e'value problem well enough that I can
-sufficiently describe our choice for Q as a solution to a generalized eigenvalue problem.
-
-What's more is that some definitions of the GE problem solve: Ax = \lambda Bx. But B must
-be nonsingular in order to transform the problem to the usual eigenvalue problem.
-That is, B^{-1} Ax = \lambda x. But if B is singular, this is problematic.
-
-** TODO Code Bhattacharyya distance
 * Package
 ** TODO Finish documentation for the 'boot_parametric' function
+** TODO Add paper references to the 'bhatta_simdiag' function
 ** TODO Add the 'Box-Cox' transformation to the 'boot_parametric' function
 ** TODO Add description and citation info to the 'tong_mean_shrinkage' function
 ** TODO Store the 'optimal' value of alpha in SDLDA and SDQDA
