--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 * Package
 ** TODO Finish documentation for the 'boot_parametric' function
 ** TODO Add paper references to the 'bhatta_simdiag' function
+** TODO Add paper references to the 'dimred_bhatta_simdiag' function
 ** TODO Add the 'Box-Cox' transformation to the 'boot_parametric' function
 ** TODO Add description and citation info to the 'tong_mean_shrinkage' function
 ** TODO Store the 'optimal' value of alpha in SDLDA and SDQDA
