--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+sparsediscrim 0.2.3
+-------------------
+
+UPDATES
+
+* Fixed an issue with the HDRDA classifier's `predict` function. The posterior
+  probabilities did not sum to 1 because they were unnormalized.
+
 sparsediscrim 0.2.2
 -------------------
 
