Added Suggests... to DESCRIPTION to pass R CMD CHECK #38

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+sparsediscrim 0.2.4
+-------------------
+
+UPDATES
+
+* Added "Suggests: testthat, caret" to DESCRIPTION to pass `R CMD CHECK`. #38
+
 sparsediscrim 0.2.3
 -------------------
 
